<resources>
    <string name="app_name">Tournament assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tournament assistant</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="please_fill_in_the_input_field">Please fill in the input field</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_tournament_name">Enter the name of the tournament</string>
    <string name="group_fights_title">Group %1$d Fights</string>

    <string name="display_mode_button_text">Display mode for Group %1$d</string>
    <string name="buffer_cleared_message">Buffer file cleared!</string>
    <string name="divide_fighters_title">Divide fighters</string>
    <string name="divide_fighters_message">Would you like to divide fighters into %1$d groups?</string>
    <string name="number_too_low_message">Number of fighters must be greater than 3.</string>
    <string name="all_fields_required">Fill in all fields!</string>
    <string name="unique_names_required">Names must be unique!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_number_message">Please enter a valid number</string>
    <string name="error_loading_fights_data">Error loading fights data</string>
    <string name="fill_score_fields">Please fill in score fields</string>
    <string name="scores_updated_successfully">Scores updated successfully</string>
    <string name="failed_to_update_scores">Failed to update scores</string>
    <string name="save_tournament_button_text">Save tournament</string>
    <string name="delete_tournament_button_text">Delete tournament</string>
    <string name="file_deleted">Tournament has been deleted</string>
    <string name="error_deleting_file">Error in deleting file with tournament</string>
    <string name="no_history_files">You have no tournaments in history(</string>
    <string name="delete_file">Delete file</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this file?</string>
    <string name="delete">Delete</string>
    <string name="open_as_tournament">Open as tournament</string>
    <string name="content_copied">Content copied to buffer file</string>
    <string name="unique_file_not_exist">This file does not exist</string>
    <string name="saved_as">Saved as %1$s</string>
    <string name="theme">Dark theme</string>
    <string name="language">Language</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Information</string>
    <string name="btn_text_create_new_tournament">New tournament</string>
    <string name="textView_enter_the_number_of_fighters">Enter the number of fighters</string>
    <string name="editText_enter_number">Enter number</string>
    <string name="btn_confirm">Confirm</string>
    <string name="fighters_group">Fighters group %1$d (%2$d fighters)</string>
    <string name="fighter_hint">Fighter %1$d</string>
    <string name="btn_generate">Generate</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="fighter_s_1_score">Fighter\'s 1 score</string>
    <string name="fighter_s_2_score">Fighter\'s 2 score</string>
    <string name="f_1_score">1 score</string>
    <string name="f_2_score">2 score</string>

    <string name="app_info">
        The "Tournament Assistant" app is designed to automate the process of creating tournament brackets for conducting training or competitions in historical medieval combat.\n\n

        Developer: Romanenko Kateryna\n
        University: ONTU\n
        Group: 342\n
        Year of development: 2024\n
        Technical support: smalldragonket@gmail.com
    </string>

</resources>