<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_create_new_tournament"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".CreateNewTournemantActivity">

    <TextView
        android:id="@+id/textViewLabel_enterNumOfFighters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_enter_the_number_of_fighters"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber_enterNumOfFighters" />

    <EditText
        android:id="@+id/editTextNumber_enterNumOfFighters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel_enterNumOfFighters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:hint="@string/editText_enter_number" />

    <Button
        android:id="@+id/buttonConfirm_numOfFighters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber_enterNumOfFighters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <ScrollView
        android:id="@+id/scrollView_namesOfFighters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonConfirm_numOfFighters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:id="@+id/llTablesContainer_namesOfFighters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>